# VoxBar

./: .gitignore  LICENSE  README.md  build.sh
backend/: README.md  article_tts.py  espeak_fallback.py  make_voice_preview.py  number.py  pyproject.toml  setup.sh  speak-article
ui/: Package.swift  README.md
ui/Scripts/: build-app.sh  generate-voice-demo.sh  generate_voice_demo.py
ui/Sources/VoxBar/: AppDelegate.swift  AppLogger.swift  AppPaths.swift  ArticleTTSViewModel.swift  ContentView.swift  GenerationService.swift  HistoryStore.swift  InboxCoordinator.swift  InboxRequest.swift  Models.swift  PlaybackController.swift  ProcessBridge.swift  VoxBarApp.swift
ui/Support/: Info.plist
