[project]
name = "article-tts"
version = "0.1.0"
description = "Extract article text from a URL, turn it into speech with Kokoro, and play it locally on macOS."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "kokoro-onnx>=0.4.9",
  "numpy>=1.26.4",
  "readability-lxml>=0.8.1",
  "requests>=2.32.3",
  "soundfile>=0.13.1",
  "trafilatura>=1.12.2",
]

[tool.uv]
package = false
